--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -31,11 +31,11 @@ h1{
   visibility: hidden;
   height: 0px;
 }
-/* header {
+header {
   visibility: hidden;
   height: 0px;
-  padding:0px;
-} */
+  padding:0px!important;
+}
 div.container astro-SCKKX6R4 {
   padding-top:0px!important;
 }
