--- a/src/components/notion-blocks/Heading1.astro
+++ b/src/components/notion-blocks/Heading1.astro
@@ -47,7 +47,8 @@ const id = buildHeadingId(block.Heading1)
   h4 {
     margin: 1.1em 0 0.3em;
     color: var(--fg);
-    font-size: 1.8rem;
+    font-size: 1.5rem;
+    border-bottom: solid 3px #666;
   }
   @media (max-width: 640px) {
     h4 {
