--- a/src/components/notion-blocks/Heading2.astro
+++ b/src/components/notion-blocks/Heading2.astro
@@ -48,10 +48,14 @@ const id = buildHeadingId(block.Heading2)
     margin: 1em 0 0.3em;
     color: var(--fg);
     font-size: 1.5rem;
+    padding: 0em 0.5em;/*上下 左右の余白*/
+    background: transparent;/*背景透明に*/
+    border-left: solid 5px #666;/*左線*/
   }
   @media (max-width: 640px) {
     h5 {
-      font-size: 1.2rem;
+      font-size: 1.3rem;
+
     }
   }
 
