--- a/src/styles/blog.module.css
+++ b/src/styles/blog.module.css
@@ -1,8 +1,7 @@
 .main header {
-  /* padding: 0 0 20px; */
+  padding: 0 0 20px;
   visibility: hidden;
   height: 0px;
-  /* padding:0px; */
 }
 .main footer {
   border-top: 1px dashed #888;
@@ -27,7 +26,7 @@
   padding: 0;
   border: 0;
 }
-h1{
+/* h1{
   visibility: hidden;
   height: 0px;
 }
@@ -38,4 +37,4 @@ header {
 }
 div.container astro-SCKKX6R4 {
   padding-top:0px!important;
-}
+} */
