--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -359,10 +359,13 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
   }
 
   h3 {
-    margin: 0;
     color: var(--fg);
     font-size: 1.2rem;
     font-weight: 700;
+  
+  }
+  h3 .astro-RESUI2LN {
+    margin-top:1rem;
   }
 
   @media (max-width: 640px) {
