--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -65,7 +65,7 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
     <meta name="twitter:description" content={siteDescription} />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content={ogImage || siteOGImage} />
-    <link rel="icon" href="../../public/img/favicon.ico">
+    <link rel="icon" href="https://www.tsubomiworks.com/img/favicon.ico">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css"
