--- a/src/components/notion-blocks/Heading1.astro
+++ b/src/components/notion-blocks/Heading1.astro
@@ -49,6 +49,7 @@ const id = buildHeadingId(block.Heading1)
     color: var(--fg);
     font-size: 1.3rem;
     border-bottom: solid 2px #666;
+    margin-bottom: 1rem;
   }
   @media (max-width: 640px) {
     h4 {
