--- a/src/components/BlogPostsLink.astro
+++ b/src/components/BlogPostsLink.astro
@@ -50,6 +50,9 @@ const { heading, posts } = Astro.props
     padding-left: 0.4rem;
     color: #777;
     font-size: 0.95rem;
+    padding: 0em 0.5em;/*上下 左右の余白*/
+    background: transparent;/*背景透明に*/
+    border-left: solid 5px #666;/*左線*/
   }
   .blog-posts-link ul {
     list-style-type: none;
