--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,6 +33,8 @@ if (database.Cover) {
     }
   }
 }
+// coverImageURL = "https://www.tsubomiworks.com/img/logo.png"  
+// coverImageURL = "../../public/img/logo.png"  
 
 let customIconURL: string
 if (database.Icon && database.Icon.Type === 'file') {
@@ -121,10 +123,7 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
 
           <footer>
             <div>
-              <span>Powered by</span>
-              <a href="https://github.com/otoyo/astro-notion-blog"
-                >astro-notion-blog</a
-              >
+              <small>&copy; 2023 つぼみワークス</small>
             </div>
           </footer>
         </div>
@@ -156,7 +155,7 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
 
   main {
     flex: 1;
-    order: 2;
+    order: 1;
     justify-content: space-between;
   }
   @media (max-width: 640px) {
@@ -166,10 +165,14 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
   }
 
   aside {
-    order: 1;
+    order: 2;
     width: 300px;
     padding: var(--asidePaddingTop) 20px 20px;
-    background-color: #f4f4f4;
+    background-color: #fff;
+  }
+  aside h3 {
+    position: sticky;
+    top: 0;  
   }
   @media (max-width: 640px) {
     aside {
@@ -184,13 +187,13 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
   div.cover img {
     display: block;
     width: 100%;
-    height: 20vh;
+    height: 140px;
     object-fit: cover;
     object-position: center 60%;
   }
 
   div.content {
-    padding: 20px 40px;
+    padding: 0px 40px 20px;
   }
   @media (max-width: 640px) {
     div.content {
