--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -195,13 +195,15 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
   }
 
   div.content {
-    /* padding: 0px 40px 20px; */
+    padding-bottom:0px;
     width:80%;
     margin:0 auto;
   }
   @media (max-width: 640px) {
     div.content {
       padding: 0 18px;
+      width:100%;
+      margin:0 auto;    
     }
   }
 
