コールアウト、キャプションデザイン変更

--- a/src/components/notion-blocks/Callout.astro
+++ b/src/components/notion-blocks/Callout.astro
@@ -47,9 +47,12 @@ const { block, headings } = Astro.props
     line-height: 1.6rem;
     border-radius: 3px;
     border-width: 1px;
-    border-style: solid;
-    border-color: transparent;
-    background: rgba(235, 236, 237, 0.6);
+    border-style: dotted;
+    border-color: #666;
+    background-color: #fff;
+    /* background: rgba(255, 255, 255, 0.6); */
+    /* border-color: transparent; */
+    /* background: rgba(235, 236, 237, 0.6); */
   }
   .callout div {
     margin: 0;
