--- a/src/components/PostFeaturedImage.astro
+++ b/src/components/PostFeaturedImage.astro
@@ -29,10 +29,12 @@ if (post.FeaturedImage && post.FeaturedImage.Url) {
 <style>
   .post-featured-image {
     padding: 0.6rem 0 0.2rem;
+    text-align: center;
   }
   .post-featured-image img {
     display: block;
     max-width: 100%;
     max-height: 20rem;
+
   }
 </style>
