--- a/src/components/notion-blocks/Caption.astro
+++ b/src/components/notion-blocks/Caption.astro
@@ -18,6 +18,7 @@ const { richTexts } = Astro.props
   .caption {
     margin-top: 0.3rem;
     font-size: 0.9rem;
-    color: var(--accents-3);
+    background: rgba(235, 236, 237, 0.6);  
+    /* color: var(--accents-3); */
   }
 </style>
