コールアウト、キャプション変更

--- a/src/components/notion-blocks/Caption.astro
+++ b/src/components/notion-blocks/Caption.astro
@@ -17,8 +17,9 @@ const { richTexts } = Astro.props
 <style>
   .caption {
     margin-top: 0.3rem;
-    font-size: 0.9rem;
-    background: rgba(235, 236, 237, 0.6);  
-    /* color: var(--accents-3); */
+    font-size: 0.8rem;
+    /* background: rgba(235, 236, 237, 0.6);   */
+    text-decoration:underline;
+    text-decoration-color: #ccc;
   }
 </style>
