--- a/src/components/notion-blocks/Callout.astro
+++ b/src/components/notion-blocks/Callout.astro
@@ -47,8 +47,8 @@ const { block, headings } = Astro.props
     line-height: 1.6rem;
     border-radius: 3px;
     border-width: 1px;
-    border-style: dotted;
-    border-color: #666;
+    border-style: solid;
+    border-color: #ccc;
     background-color: #fff;
     /* background: rgba(255, 255, 255, 0.6); */
     /* border-color: transparent; */
