--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -67,6 +67,7 @@ const asidePaddingTop = coverImageURL ? '200px' : '60px'
     <meta name="twitter:description" content={siteDescription} />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content={ogImage || siteOGImage} />
+    <meta name="google-site-verification" content="IadlQFS6ukDKsuLP48xxqXn76GtUpjm0MFBNzZihKew" />
     <link rel="icon" href="/img/favicon.ico"> 
     <link
       rel="stylesheet"
